support for more simple type bindings
git-svn-id: https://anonsvn.jboss.org/repos/common/trunk@754 15291643-af16-0410-b526-a589213603f9